Fixed z-index of delete file confirmation dialogue on Register Study wizard.

--- a/trunk/manta/war/WEB-INF/resources/apps/common/theme/manta.css
+++ b/trunk/manta/war/WEB-INF/resources/apps/common/theme/manta.css
@@ -317,6 +317,9 @@ ul {
 .shadow {
     z-index: 1001 !important;   
 }
+.yui-dialog {
+    z-index: 1001 !important;
+}
 
 .yui-panel-container ul {
     margin-left: 2em;
